--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <body>
   <section id="content">
       Everything has been composed, just not yet written down.
