--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     #content {
         text-align: center;
         margin: 10em auto;
-        font-family: 'Open Sans';
+        font-family: 'Open Sans', 'Helvetica Neue';
         font-size: 30px;
         font-weight: 100;
         -webkit-font-smoothing: antialiased;
