--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<title>It is said</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <body>
   <section id="content">
@@ -11,6 +12,7 @@
         height: 100%;
         color: #ffffff;
         background-color: #000000;
+        background: url(albert-einstein.jpg) no-repeat;
     }
     #content {
         text-align: center;
