--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         color: #ffffff;
         background-color: #000000;
         background: url(albert-einstein.jpg) no-repeat;
+        background-size: 100% auto;
     }
     #content {
         text-align: center;
