use cover for bg size

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         color: #ffffff;
         background-color: #000000;
         background: url(albert-einstein.jpg) no-repeat;
-        background-size: 100% auto;
+        background-size: cover;
     }
     #content {
         text-align: center;
