--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         position: relative;
         top: 40%;
         text-align: center;
-        height: 1em;
+        height: 3em;
         line-height: 1em;
         font-family: 'Open Sans', 'Helvetica Neue', 'Arial', sans-serif;
         font-size: 34px;
@@ -46,6 +46,16 @@
         float: right;
         position: relative;
         top: 50%;
+    }
+
+    @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 568px) {
+        #content cite {
+            position: relative;
+            top: 55%;
+            text-align: center;
+        }
     }
 </style>
 </html>
